[package]
name = "test-moka"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1" # Will be integrated into tokio when std::stream becomes stable. ref: https://doc.rust-lang.org/std/stream/index.html
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rust_decimal = {version = "1.36", features = ["db-diesel2-postgres"]}
derive_more = { version = "0.99", default-features = false, features = ["from", "deref", "display", "from_str"] }
strum = { version = "0.26", features = ["derive"] }
trait-variant = "0.1"
thiserror = "2.0"
futures = "0.3"
moka = { version = "0.12.10", features = ["future"] }
